--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mosley Plumbing Company, Inc.</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -89,7 +89,7 @@
 </div>
 
 <div class="footer">
-  <p>&copy; 2022 Mosley Plumbing Company, Inc.</p>
+  <p>&copy; 2024 Mosley Plumbing Company, Inc.</p>
 </div>
 </body>
 </html>
