--- a/about.html
+++ b/about.html
@@ -28,8 +28,17 @@
     <div class="hero">
         <div class="hero-inner"> 
            <h1>About Us</h1>
-         <p>Providing plumbing and irrigation services to Warren, Vance, and Franklin counties since 1982.</p>
-         </div>
+         <br> 
+         <p>Providing plumbing and irrigation services to Vance, Granville, Franklin, and Warren counties since 1982.</p>
+         <br> 
+         <p>We are a full service plumbing company, fully licensed, and insured!</p> 
+         <br> 
+         <p>Licenses and Certification:</p> 
+         <li>North Carolina Plumbing Licence Class 1</li>
+         <li>Residential Fire Sprinkler Installation Contractor</li> 
+         <li>NC Certified Backflow Tester</li>
+         <li>Lead Renovation Certification</li>
+        </div>
        </div>
 
        <div class="features">
