--- a/contact_us.html
+++ b/contact_us.html
@@ -34,7 +34,7 @@
              <p>mosleyplumbing@gmail.com</p>
              <br>
              <h2>Phone:</h2>
-             <p>(252) 492-0243</p>
+             <p>(252) 492-0243 *Please leave us a message*</p>
              <br>
              <h2>Address:</h2>
              <p>247 E Montgomery St.<br>
@@ -48,6 +48,13 @@
              Friday: 7:30 AM - 4:00 PM<br>
              Saturday: 7:30 AM - 12:00 PM<br>
              Sunday: 7:30 AM - 12:00 PM</p>
+             <br>
+             <p>*Phones and emails are checked regularly<br> 
+              during business hours. Please fell free to<br> 
+              leave a message and know we will get back to<br> 
+              you shortly to schedule your service visit.<br> 
+              Please leave your name, number, email, and a<br> 
+              description of your service request.*</p>
              </div>
            </div>
     
