--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 <div class="hero">
  <div class="hero-inner"> 
     <h1>We do the dirty work so you don't have to!</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ratione iusto voluptas, repudiandae incidunt quisquam necessitatibus! Neque dolorum expedita explicabo saepe officia voluptatum laudantium cupiditate voluptatem est, debitis, reiciendis beatae.</p>
-  <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook</a>
+    <br>
+    <p>We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 50 plus years of plumbing and irrigation experinece.</p>
+    <br>
+    <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook</a>
   <div class="image">
     <img src="Images/Google Maps Street View.PNG" alt="Google Maps Street View">
   </div>
