--- a/services.html
+++ b/services.html
@@ -30,9 +30,26 @@
             <div class="hero-inner"> 
                <h1>Services Offered</h1>
              <p><ul>
-                    <li>New Construction</li>
-                    <li>Repairs</li>
-                    <li>Irrigation</li>
+                    <li>Repair, Remodel, and New Construction</li>
+                    <li>Water Heater Replacement/Upgrade</li>
+                    <li>Well Pump Replacement/Installation</li>
+                    <li>Pump Tank Replacement/Installation</li>
+                    <li>Sewer Pump Replacement/Installation</li>
+                    <li>Sump Pump Replacement/Installation</li>
+                    <li>Sewer Drain Cleaning</li>
+                    <li>Jet Out grease Lines</li>
+                    <li>Install Water Conditioner</li>
+                    <li>Install/Maintain Inline Water Filters</li>
+                    <li>Replace Water Closets...aka the Toilet</li>
+                    <li>Replace/Repair all Faucets</li>
+                    <li>County Water Hook Up</li>
+                    <li>Installation/Repair/Replacement of Water and Sewer Lines</li>
+                    <ul>
+                      <li>We have our own digging equipment.</li>
+                    </ul>
+                    <li>Winterize Lake House/Rental House</li>
+                    <li>Installation of Backflow Assemblies</li>
+                    <li>Backflow Testing</li>
                 </ul></p>
              </div>
            </div>
