--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <div class="hero-inner"> 
     <h1>We do the dirty work so you don't have to!</h1>
     <br>
-    <p>We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 50 plus years of plumbing and irrigation experinece.</p>
+    <p>We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 50 plus years of plumbing and irrigation experience.</p>
     <br>
     <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook</a>
   <div class="image">
