--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <div class="header"> 
       <h1>Mosley Plumbing Company, Inc.</h1> 
     
-      <img src="Logos/MPC Logo.jpg" alt="MPC Logo">
+      <img src="Logos/Pipe Wrench Red Background.jpg" alt="MPC Logo">
     
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
@@ -29,7 +29,7 @@
         <div class="hero-inner"> 
            <h1>About Us</h1>
          <br> 
-         <p>Providing plumbing and irrigation services to Vance, Granville, Franklin, and Warren counties since 1982.</p>
+         <p>Providing plumbing and irrigation services to Vance, Granville, Franklin, and Warren counties since 1987.</p>
          <br> 
          <p>We are a full service plumbing company, fully licensed, and insured!</p> 
          <br> 
