--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="header"> 
     <h1>Mosley Plumbing Company, Inc.</h1> 
       
-    <img src="Logos/MPC Logo.jpg" alt="MPC Logo">
+    <img src="Logos/Pipe Wrench Red Background.jpg" alt="MPC Logo">
     
     <ul class="nav">
         <li><a href="index.html">Home</a></li>
@@ -29,7 +29,7 @@
  <div class="hero-inner"> 
     <h1>We do the dirty work so you don't have to!</h1>
     <br>
-    <p>We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 50 plus years of plumbing and irrigation experience.</p>
+    <p>We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 50 plus years of experience.</p>
     <br>
     <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook</a>
   <div class="image">
