--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="header"> 
     <h1>Mosley Plumbing Company, Inc.</h1> 
       
-    <img src="Logos/Pipe Wrench Red Background.jpg" alt="MPC Logo">
+    <img src="Logos/Pipe Wrench Transparent Background.png" alt="MPC Logo">
     
     <ul class="nav">
         <li><a href="index.html">Home</a></li>
