--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="hero-inner"> 
            <h1>About Us</h1>
          <br> 
-         <p>Providing plumbing and irrigation services to Vance, Granville, Franklin, and Warren counties since 1987.</p>
+         <p>Providing residential and commercial plumbing services to Vance, Granville, Franklin, and Warren counties since 1987.</p>
          <br> 
          <p>We are a full service plumbing company, fully licensed, and insured!</p> 
          <br> 
