--- a/contact_us.html
+++ b/contact_us.html
@@ -31,7 +31,7 @@
                <h1>Contact Us</h1>
                <br>
              <h2>Email:</h2>
-             <p>mosleyplumbing@gmail.com</p>
+             <a href="mosleyplumbing@gmail.com">mosleyplumbing@gmail.com</a>
              <br>
              <h2>Phone:</h2>
              <p>(252) 492-0243 *Please leave us a message*</p>
