--- a/contact_us.html
+++ b/contact_us.html
@@ -18,7 +18,7 @@
           <img src="Logos/Pipe Wrench Transparent Background.png" alt="MPC Logo">
         
           <ul class="nav">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -31,7 +31,8 @@
                <h1>Contact Us</h1>
                <br>
              <h2>Email:</h2>
-             <a href="mosleyplumbing@gmail.com">mosleyplumbing@gmail.com</a>
+             <a target="_blank" href="contact form.html">mosleyplumbing@gmail.com</a>
+             <br>
              <br>
              <h2>Phone:</h2>
              <p>(252) 492-0243 *Please leave us a message*</p>
@@ -46,14 +47,14 @@
              Wednesday: 7:30 AM - 4:00 PM<br>
              Thursday: 7:30 AM - 4:00 PM<br>
              Friday: 7:30 AM - 4:00 PM<br>
-             Saturday: 7:30 AM - 12:00 PM<br>
-             Sunday: 7:30 AM - 12:00 PM</p>
+             Saturday: 7:30 AM - 12:00 PM *Emergency hours*<br>
+             Sunday: 7:30 AM - 12:00 PM *Emergency hours*</p>
              <br>
              <p>*Phones and emails are checked regularly<br> 
-              during business hours. Please fell free to<br> 
+              during business hours. Please feel free to<br> 
               leave a message and know we will get back to<br> 
               you shortly to schedule your service visit.<br> 
-              Please leave your name, number, email, and a<br> 
+              Please leave your name, number, and a<br> 
               description of your service request.*</p>
              </div>
            </div>
@@ -79,7 +80,7 @@
           </div>
           
           <div class="footer">
-            <p>&copy; 2024 Mosley Plumbing Company, Inc.</p>
+            <p>2024 Mosley Plumbing Company, Inc.</p>
           </div>
 </body>
 </html>
