--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
       <img src="Logos/Pipe Wrench Transparent Background.png" alt="MPC Logo">
     
       <ul class="nav">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="projects.html">Projects</a></li>
@@ -60,7 +60,7 @@
       </div>
       
       <div class="footer">
-        <p>&copy; 2024 Mosley Plumbing Company, Inc.</p>
+        <p>2024 Mosley Plumbing Company, Inc.</p>
       </div>
 </body>
 </html>
