--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
           <img src="Logos/Pipe Wrench Transparent Background.png" alt="MPC Logo">
         
           <ul class="nav">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -29,27 +29,28 @@
         <div class="hero">
             <div class="hero-inner"> 
                <h1>Services Offered</h1>
+               <h3>Residential & Commercial</h3>
              <p><ul>
-                    <li>Repair, Remodel, and New Construction</li>
-                    <li>Water Heater Replacement/Upgrade</li>
-                    <li>Well Pump Replacement/Installation</li>
-                    <li>Pump Tank Replacement/Installation</li>
-                    <li>Sewer Pump Replacement/Installation</li>
-                    <li>Sump Pump Replacement/Installation</li>
-                    <li>Sewer Drain Cleaning</li>
-                    <li>Jet Out grease Lines</li>
-                    <li>Install Water Conditioner</li>
-                    <li>Install/Maintain Inline Water Filters</li>
-                    <li>Replace Water Closets...aka the Toilet</li>
-                    <li>Replace/Repair all Faucets</li>
-                    <li>County Water Hook Up</li>
-                    <li>Installation/Repair/Replacement of Water and Sewer Lines</li>
-                    <ul>
-                      <li>We have our own digging equipment.</li>
-                    </ul>
-                    <li>Winterize Lake House/Rental House</li>
-                    <li>Installation of Backflow Assemblies</li>
-                    <li>Backflow Testing</li>
+                  <li>Repair, Remodel, and New Construction</li>
+                  <li>Water Heater Replacement/Upgrade</li>
+                  <li>Well Pump Replacement/Installation</li>
+                  <li>Pump Tank Replacement/Installation</li>
+                  <li>Sewer Pump Replacement/Installation</li>
+                  <li>Sump Pump Replacement/Installation</li>
+                  <li>Sewer Drain Cleaning</li>
+                  <li>Jet Out grease Lines</li>
+                  <li>Install Water Conditioner</li>
+                  <li>Install/Maintain Inline Water Filters</li>
+                  <li>Replace/Repair Water Closets...aka the Toilet</li>
+                  <li>Replace/Repair Faucets</li>
+                  <li>County Water Hook Up</li>
+                  <li>Installation/Repair/Replacement of Water and Sewer Lines</li>
+                  <ul>
+                    <li>We have our own digging equipment.</li>
+                  </ul>
+                  <li>Winterize Lake House/Rental House</li>
+                  <li>Installation of Backflow Assemblies</li>
+                  <li>Backflow Testing</li>
                 </ul></p>
              </div>
            </div>
@@ -75,7 +76,7 @@
           </div>
           
           <div class="footer">
-            <p>&copy; 2024 Mosley Plumbing Company, Inc.</p>
+            <p>2024 Mosley Plumbing Company, Inc.</p>
           </div>
 </body>
 </html>
