--- a/contact form.html
+++ b/contact form.html
@@ -7,12 +7,14 @@
     <script src="https://kit.fontawesome.com/2c9a70b72f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="bootstrap/js/bootstrap.bundle.js">
+    <link rel="stylesheet" href="Styles/style.css"> 
+    
     <title>Contact Form</title>
   </head>
 
   <body>
     <div class="container mt-5">
-        <h1>Contact Me!</h1>
+        <h1>Contact Mosley Plumbing Company!</h1>
         <form class="row g-3" action="https://formsubmit.co/mosleylaura95@gmail.com" method="POST">
             <!-- Honeypot --> 
             <input type="text" name="_honey" style="display: none;"> 
@@ -46,6 +48,7 @@
         </form>
     </div>
 
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
