--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
       <img src="Logos/Pipe Wrench Transparent Background.png" alt="MPC Logo">
     
       <ul class="nav">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="projects.html">Projects</a></li>
