--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 <!-- Dark Mode Toggle -->
-<script src="dark-mode-toggle.js"></script>
+<!-- <script src="dark-mode-toggle.js"></script> -->
 
 </body>
 </html>
