--- a/about.html
+++ b/about.html
@@ -32,21 +32,23 @@
     </div> 
 
     <div class="hero">
-        <div class="hero-inner"> 
-           <h1>About Us</h1>
+        <div class="hero-inner-about"> 
+           <h1 style="text-align:center;">About Us</h1>
          <br> 
-         <p>Providing residentail and commercial plumbing services to Vance, Granville, Franklin, and Warren counties since 1987.</p>
+         <p style="text-align:center;">Providing residentail and commercial plumbing services to Vance, Granville, Franklin, and Warren counties since 1987.</p>
          <br> 
-         <p>We are a full service plumbing company, fully Licensed, and Insured!</p> 
+         <p style="text-align:center;">We are a full service plumbing company, fully Licensed, and Insured!</p> 
          <br> 
-         <p>Licenses and Certification:</p> 
-         <li>North Carolina Plumbing Licence Class 1</li>
-         <li>Residential Fire Sprinkler Installation Contractor</li> 
-         <li>NC Certified Backflow Tester</li>
-         <li>Lead Renovation Certification</li>
-         <li>NC Well Contractors Certification Class D</li>
+         <h4 style="text-align:center;">Licenses and Certification:</h4> 
+          <div class="about">
+            <li class="bullets-inside">North Carolina Plumbing Licence Class 1</li>
+            <li class="bullets-inside">Residential Fire Sprinkler Installation Contractor</li> 
+            <li class="bullets-inside">NC Certified Backflow Tester</li>
+            <li class="bullets-inside">Lead Renovation Certification</li>
+            <li class="bullets-inside">NC Well Contractors Certification Class D</li>
+          </div>
         </div>
-       </div>
+    </div>
       
       <div class="footer">
         <p>2024 Mosley Plumbing Company, Inc.</p>
