--- a/contact_us.html
+++ b/contact_us.html
@@ -33,7 +33,7 @@
         </div> 
     
         <div class="hero">
-            <div class="hero-inner"> 
+            <div class="hero-inner-contact"> 
                <h1>Contact Us</h1>
                <br>
              <h2>Email:</h2>
@@ -56,12 +56,7 @@
              Saturday: 7:30 AM - 12:00 PM *Emergency hours*<br>
              Sunday: 7:30 AM - 12:00 PM *Emergency hours*</p>
              <br>
-             <p>*Phones and emails are checked regularly<br> 
-              during business hours. Please feel free to<br> 
-              leave a message and know we will get back to<br> 
-              you shortly to schedule your service visit.<br> 
-              Please leave your name, number, and a<br> 
-              description of your service request.*</p>
+             <p>*Phones and emails are checked regularly during business hours. Please feel free to leave a message and know we will get back to you shortly to schedule your service visit. Please leave your name, number, and a description of your service request.*</p>
              </div>
            </div>
     
