--- a/services.html
+++ b/services.html
@@ -33,9 +33,9 @@
         </div> 
     
         <div class="hero">
-            <div class="hero-inner"> 
+            <div class="hero-inner-services"> 
                <h1>Services Offered</h1>
-               <h3>Residential & Commercial</h3>
+               <h3 style="text-align:center;">Residential & Commercial</h3>
              <p><ul>
                   <li>Repair, Remodel, and New Construction</li>
                   <li>Water Heater Replacement/Upgrade</li>
