--- a/projects.html
+++ b/projects.html
@@ -32,8 +32,9 @@
     </div> 
 
     <div class="hero">
-        <div class="hero-inner"> 
+        <div class="hero-inner-project"> 
            <h1>Noteworthy Projects</h1>
+           <br> 
          <p>Content coming soon...</p>
          </div>
        </div>
