--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
         <div class="header"> 
           <h1>Mosley Plumbing Company, Inc.</h1> 
         
-          <img src="Logos/Pipe Wrench Transparent Background.png" alt="MPC Logo">
+          <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
         
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
