--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="header"> 
   <nav class="navbar col-12">
       <div class="row-index col-12"> 
-        <a class="navbar-brand fw-bold" style="font-size: 5vw" href="about.html">Mosley Plumbing Company, Inc.</a> 
+        <a class="navbar-brand fw-bold" style="font-size: 4vw" href="about.html">Mosley Plumbing Company, Inc.</a> 
       </div>  
       <div class="row-index col-12"> 
         <div class="dropdown">
@@ -57,9 +57,9 @@
         <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
       </div>
       <div class="Text col-lg-8 col-md-9 col-sm-11">
-        <h1 class="fw-bold">We do the dirty work so you don't have to!</h1>
+        <h1 class="fw-bold" style="font-size: 5vw">We do the dirty work so you don't have to!</h1>
         <br>
-        <p class="fw-bold">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
+        <p class="fw-bold" style="font-size: 2vw">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
         <br>
         <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook <i class="fab fa-facebook"></i></a> 
       </div>
