--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
     <!-- External Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
     
-    <!-- External Dark Reader CDN -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.92/darkreader.min.js"></script> -->
-    
     <title>Mosley Plumbing Company, Inc.</title>
 </head>
 <body>
@@ -31,7 +28,7 @@
 <div class="header"> 
   <nav class="navbar col-12">
       <div class="row-index col-12"> 
-        <a class="navbar-brand fw-bold" style="font-size: 4vw" href="about.html">Mosley Plumbing Company, Inc.</a> 
+        <a class="navbar-brand fw-bold" style="font-size: 4vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
       </div>  
       <div class="row-index col-12"> 
         <div class="dropdown">
@@ -53,13 +50,13 @@
 <div class="hero">
   <div class="hero-inner-index">
     <div class="grid-index">
-      <div class="Pipe-Wrench col-lg-2 col-md-2 col-sm-2"> 
+      <div class="Pipe-Wrench col-md-2 col-sm-3"> 
         <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
       </div>
-      <div class="Text col-lg-10 col-md-10 col-sm-9">
-        <h1 class="fw-bold" style="font-size: 5vw">We do the dirty work so you don't have to!</h1>
+      <div class="Text col-md-10 col-sm-9">
+        <h1 class="Dirty-work fw-bold" style="font-size: 5vw">We do the dirty work so you don't have to!</h1>
         <br>
-        <p class="fw-bold" style="font-size: 2vw">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
+        <p class="Happy fw-bold" style="font-size: 3vw">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
         <br>
         <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook <i class="fab fa-facebook"></i></a> 
       </div>
