--- a/contact form.html
+++ b/contact form.html
@@ -58,7 +58,7 @@
             <input type="text" name="_honey" style="display: none;"> 
 
             <!-- Success Message Link -->
-            <input type="hidden" name="_next" value="success.html">
+            <input type="hidden" name="_next" value="https://mosleyl14.github.io/Mosley-Plumbing-Company-Inc/success.html">
 
             <div class="col-md-6">
                 <label for="firstName" class="form-label">First Name</label>
