--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 <div class="hero">
   <div class="hero-inner-index">
       <div class="Text">
-        <h1 class="Dirty-work fw-bold" style="font-size: 5vw">We do the dirty work so you don't have to!</h1>
+        <h1 class="Dirty-work fw-bold">We do the dirty work so you don't have to!</h1>
         <br>
-        <p class="Happy fw-bold" style="font-size: 3vw">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
+        <p class="Happy fw-bold">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
         <br>
         <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook <i class="fab fa-facebook"></i></a> 
       </div>
