--- a/index.html
+++ b/index.html
@@ -53,12 +53,28 @@
 <div class="hero">
   <div class="hero-inner-index">
       <div class="Text">
-        <h1 class="Dirty-work fw-bold">We do the dirty work so you don't have to!</h1>
-        <br>
-        <p class="Happy fw-bold">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
+        <div class="grid-features-hero">
+          <div class="row-hero">
+            <div class="Index-main col-sm-8">
+              <div class="card shadow-lg">
+
+                <div class="card-header-hero">
+                  <img src="Images/MosleyPlumbing.jpg" alt="" class="img-fluid">
+                </div>
+
+                <div class="card-body-hero">
+                  <h1 class="Dirty-work fw-bold">We do the dirty work so you don't have to!</h1>
+                  <p class="fw-bold">We are happy to help with your next plumbing project. You can confidently rely on our 3 licensed plumbers and combined 70 plus years of experience.</p>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
         <br>
         <a target="_blank" href="https://www.facebook.com/MosleyPlumbingCo/" class="button">Follow us on Facebook <i class="fab fa-facebook"></i></a> 
       </div>
+    <!-- 
     <div class="image">
       <div class="card shadow-lg">
         <div class="card-header">
@@ -66,6 +82,7 @@
         </div>
       </div>
     </div>
+  --> 
   </div>
 </div>
 
