--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
       </div>
       <div class="navbar-brand col-7"> 
-        <a class="navbar-brand fw-bold" style="" href="index.html">Mosley Plumbing Company, Inc.</a> 
+        <h1 class="navbar-brand fw-bold" style="" href="index.html">Mosley Plumbing Company, Inc.</h1> 
       </div>  
       <div class="dropdown-index col-1"> 
         <div class="dropdown">
