--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
         <div class="hero-inner-project"> 
            <h1 style="text-align:center" class="fw-bold">Noteworthy Projects</h1>
            <br> 
-         <p>Content coming soon...</p>
+         <p style="text-align:center">Content coming soon...</p>
          </div>
        </div>
 
