--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
         </div> 
     
         <div class="hero">
-            <div class="hero-inner-services col-4"> 
+            <div class="hero-inner-services col-md-4 col-sm-10"> 
                <h1 style="text-align:center" class="fw-bold">Services Offered</h1>
                <h3 style="text-align:center">Residential & Commercial</h3>
              <p><ul>
