--- a/services.html
+++ b/services.html
@@ -51,9 +51,10 @@
         </div> 
     
         <div class="hero">
-            <div class="hero-inner-services col-md-4 col-sm-10"> 
+            <div class="hero-inner-services col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-sm-8"> 
                <h1 style="text-align:center" class="fw-bold">Services Offered</h1>
                <h3 style="text-align:center">Residential & Commercial</h3>
+               <div class="list-container">
              <p><ul>
                   <li>Repair, Remodel, and New Construction</li>
                   <li>Water Heater Replacement/Upgrade</li>
@@ -76,6 +77,7 @@
                   <li>Installation of Backflow Assemblies</li>
                   <li>Backflow Testing</li>
                 </ul></p>
+              </div>
              </div>
            </div>
     
