--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
         <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
       </div>
       <div class="navbar-brand col-7"> 
-        <a class="navbar-brand fw-bold" style="font-size: 3vw" href="index.html">Mosley Plumbing Company, Inc.</a> 
+        <a class="navbar-brand fw-bold" href="index.html">Mosley Plumbing Company, Inc.</a> 
       </div>  
       <div class="dropdown-index col-1"> 
         <div class="dropdown">
