--- a/contact form.html
+++ b/contact form.html
@@ -81,7 +81,7 @@
           <label for="comments" class="form-label">Service request, questions?</label>
           <textarea class="form-control" name="Service&nbsp;request,&nbsp;questions?" id="comments" rows="3" required></textarea>
         </div>
-        <div class="col-md-12">
+        <div class="submit col-md-12">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
