--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 
   <div class="header"> 
     <nav class="navbar">
-      <div class="Pipe-Wrench col-1"> 
-        <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
+      <div class="Space col-1"> 
       </div>
       <div class="navbar-brand col-7"> 
-        <a class="navbar-brand fw-bold" href="index.html">Mosley Plumbing Company, Inc.</a> 
+        <div class="Pipe-Wrench col-1"> 
+          <img src="Logos/Pipe Wrench.png" alt="MPC Logo">
+        </div>
+        <a class="brand col-7 fw-bold" href="index.html">Mosley Plumbing Company, Inc.</a> 
       </div>  
       <div class="dropdown-index col-1"> 
         <div class="dropdown">
@@ -73,7 +75,7 @@
   <div class="features">
     <div class="grid">
       <div class="row">
-        <div class="features-main col-sm-6">
+        <div class="features-main col-sm-4">
           <div class="card shadow-lg">
             <div class="card-header text-white">
               <img src="Images/Kenny.png" alt="" class="img-fluid">
@@ -84,7 +86,7 @@
             </div>
           </div>
         </div>
-        <div class="features-main col-sm-6">
+        <div class="features-main col-sm-4">
           <div class="card shadow-lg">
             <div class="card-header text-white">
               <img src="Images/Renee.png" alt="" class="img-fluid">
@@ -92,6 +94,17 @@
             <div class="card-body">
               <p class="fw-bold">"Thank you for allowing us to help you with your plumbing needs!"</p>
               <p class="h3 fw-bold">~ Renee Mosley</p>
+            </div>
+          </div>
+        </div>
+        <div class="features-main col-sm-4">
+          <div class="card shadow-lg">
+            <div class="card-header text-white">
+              <img src="Images/Jacob.png" alt="" class="img-fluid">
+            </div>
+            <div class="card-body">
+              <p class="fw-bold">"Always happy to help!"</p>
+              <p class="h3 fw-bold">~ Jacob Mosley</p>
             </div>
           </div>
         </div>
