--- a/contact form.html
+++ b/contact form.html
@@ -109,7 +109,7 @@
         <button type="submit">Send</button>
     </form>
 
-    <script src="nodemailer.js"></script>
+    <script src="js/nodemailer.js"></script>
   </div>
 
   <div class="footer">
